--- a/Engine/PlanarPhysics.vcxproj.filters
+++ b/Engine/PlanarPhysics.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClInclude Include="Source\Math\Utilities\Transform.h">
       <Filter>Source\Math\Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Math\Utilities\Random.h">
+      <Filter>Source\Math\Utilities</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Engine.cpp">
@@ -157,6 +160,9 @@
       <Filter>Source\CollisionHandlers</Filter>
     </ClCompile>
     <ClCompile Include="Source\Math\Utilities\Transform.cpp">
+      <Filter>Source\Math\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Math\Utilities\Random.cpp">
       <Filter>Source\Math\Utilities</Filter>
     </ClCompile>
   </ItemGroup>
